--- a/index.html
+++ b/index.html
@@ -3,60 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Be You Cosméticos - Productos capilares de alta calidad para resaltar tu belleza única. Tintes, agua oxigenada y más.">
-    <meta name="keywords" content="tintes, cosméticos, belleza, cabello, agua oxigenada, Be You">
-    <meta name="author" content="Be You Cosméticos">
     <title>Be You Cosméticos - Inicio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Be You Cosméticos ofrece productos capilares de alta calidad para resaltar tu belleza única. Descubre nuestra gama de tintes y accesorios.">
+    <meta name="keywords" content="tintes, cosméticos, belleza, productos capilares, Be You">
+    <meta name="author" content="Be You Cosméticos">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header class="fade-in text-center">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container">
-                <a class="navbar-brand" href="#inicio">Be You Cosméticos</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pages/acerca-de.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pages/marcas.html">Marcas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contáctanos</a></li>
-                    </ul>
-                </div>
+<body id="body">
+    <header class="bg-light text-center py-3">
+        <h1>Comercializadora Be You Cosméticos</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#inicio">Be You Cosméticos</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/acerca-de.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/marcas.html">Marcas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contáctanos</a></li> 
+                </ul>
             </div>
         </nav>
-        <div class="container mt-4">
-            <h1 class="slide-in">Te ayudamos a resaltar tu belleza única</h1>
-            <img src="images/image-home.jpg" alt="Productos capilares" class="img-fluid rounded shadow-lg">
-            <p class="mt-3">Conectamos a los mejores proveedores de tintes con nuestros clientes. Calidad garantizada.</p>
-            <a href="pages/contacto.html" class="btn btn-primary slide-in">Contáctanos</a>
-        </div>
     </header>
 
-    <main class="slide-in container mt-5">
-        <section>
+    <main id="main">
+        <div class="container text-center mt-5">
+            <h1>Te ayudamos a resaltar tu belleza única a través de productos capilares de alta calidad</h1>
+            <img src="images/image-home.jpg" alt="Productos capilares" class="imagen-principal">
+            <p>Conectamos a los mejores proveedores de tintes con nuestros clientes. Calidad garantizada.</p>
+            <a href="contacto.html" class="btn btn-primary">Contáctanos</a>
+        </div>
+
+        <section id="como-trabajamos" class="container mt-5">
             <h2 class="text-center">¿Cómo trabajamos?</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
-                <div class="col fade-in">
-                    <div class="p-3 border rounded shadow">
-                        <h3>Paso 1</h3>
-                        <p>Contáctanos para que un asesor se ponga en contacto contigo.</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card text-center mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Paso 1</h5>
+                            <p class="card-text">Contáctanos para que un asesor se ponga en contacto contigo.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col fade-in">
-                    <div class="p-3 border rounded shadow">
-                        <h3>Paso 2</h3>
-                        <p>Luego de solventar dudas, se puede proceder a la compra según la financiación elegida.</p>
+                <div class="col-md-4">
+                    <div class="card text-center mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Paso 2</h5>
+                            <p class="card-text">Luego de solventar dudas, se puede proceder a la compra según la financiación elegida.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col fade-in">
-                    <div class="p-3 border rounded shadow">
-                        <h3>Paso 3</h3>
-                        <p>Recibe tus tintes en la dirección acordada.</p>
+                <div class="col-md-4">
+                    <div class="card text-center mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Paso 3</h5>
+                            <p class="card-text">Recibe tus tintes en la dirección acordada.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -85,6 +91,8 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
